# gpt-yaml

./: .flake8  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/workflows/: cicd.yml
docs/: index.md
gptyaml/prompts/: __init__.py  _chat_completion.py
gptyml/: __init__.py  gptyml.py
search/: search_index.json
tests/: test_something.py
tests/files/: chat_completion_base.yaml  chat_completion_invalid.yaml
tests/prompts/: test_chat_completion.py
