[tool.poetry]
name = "gptyml"
version = "0.0.1"
description = "Define chatGPT prompts using yml files."
authors = ["Maurice Künicke <m.kuenicke1995@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.6"
mkdocs-material-extensions = "^1.1.1"
mypy = "^1.2.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''